Jquery, Bootstrap Versioning Bug Fixed

--- a/dashboard/templates/dashboard/components/styles.html
+++ b/dashboard/templates/dashboard/components/styles.html
@@ -13,4 +13,4 @@
 <link rel="shortcut icon" href="{% static 'assets/images/logo/auspicious-logo.png' %}" type="image/x-icon">
 
 <!-- Load JQuery -->
-<!-- <script src="{% static 'assets/vendors/jquery/jquery.min.js' %}"></script> -->
+<script src="{% static 'assets/vendors/jquery/jquery.min.js' %}"></script>
