--- a/dashboard/templates/dashboard/components/notifications.html
+++ b/dashboard/templates/dashboard/components/notifications.html
@@ -1,5 +1,5 @@
 <li class="nav-item dropdown me-3">
-    <a class="nav-link active dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+    <a class="nav-link active dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
         <i class='bi bi-bell bi-sub fs-4 text-gray-600'></i>
     </a>
     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
