--- a/auspicious/templates/snippets/form.html
+++ b/auspicious/templates/snippets/form.html
@@ -10,6 +10,7 @@
 
 {% for hidden_field in form.hidden_fields %}
 {% if hidden_field.errors %}
+{% include "dashboard/snippets/form-script-handler.html" %}
 <div class="alert alert-danger" role="alert">
     {% for error in hidden_field.errors %}
     <p class="text-danger font-italic">
@@ -22,6 +23,7 @@
 {% endfor %}
 
 {% if form.non_field_errors %}
+{% include "dashboard/snippets/form-script-handler.html" %}
 <div class="alert alert-danger" role="alert">
     {% for error in form.non_field_errors %}
     <p class="text-danger">
@@ -91,6 +93,7 @@
                 </div>
 
                 {% if field.errors %}
+                {% include "dashboard/snippets/form-script-handler.html" %}
                 {% for error in field.errors %}
                 <div class="row form-error-div">
                     <b class="col-md-12 text-danger">
