--- a/dashboard/templates/dashboard/components/sidebar.html
+++ b/dashboard/templates/dashboard/components/sidebar.html
@@ -111,9 +111,9 @@
 
             {% endif %}
 
-                        <!-- Social Account -->
+            <!-- Job Position -->
 
-            {% if perms.dashboard.add_project or perms.dashboard.view_social_account %}
+            {% if perms.dashboard.add_project or perms.dashboard.view_job_position %}
             <li class="sidebar-item">
                 <a href="{% url 'dashboard:create_job_position' %}" class="sidebar-link">
                     <i class="fas fa-user-md" aria-hidden="true"></i>
@@ -122,6 +122,19 @@
             </li>
 
             {% endif %}
+
+            <!-- Contact -->
+
+            {% if perms.dashboard.add_project or perms.dashboard.view_contact %}
+            <li class="sidebar-item">
+                <a href="{% url 'dashboard:create_contact' %}" class="sidebar-link">
+                    <i class="fas fa-user-md" aria-hidden="true"></i>
+                    <span>Contact</span>
+                </a>
+            </li>
+
+            {% endif %}
+
 
 
 
