--- a/dashboard/templates/dashboard/components/sidebar.html
+++ b/dashboard/templates/dashboard/components/sidebar.html
@@ -27,7 +27,7 @@
             <li class="sidebar-item">
                 <a href="{% url 'create_group' %}" class='sidebar-link'>
                     <i class="fa fa-layer-group"></i>
-                    <span>Manage User Group</span>
+                    <span> User Group</span>
                 </a>
             </li>
             {% endif %}
@@ -38,7 +38,7 @@
             <li class="sidebar-item">
                 <a href="{% url 'create_user' %}" class="sidebar-link">
                     <i class="fa fa-users-cog"></i>
-                    <span>Manage Admin User</span>
+                    <span> Admin User</span>
                 </a>
             </li>
             {% endif %}
@@ -49,7 +49,7 @@
             <li class="sidebar-item">
                 <a href="{% url 'dashboard:create_project_category' %}" class="sidebar-link">
                     <i class="fa fa-project-diagram"></i>
-                    <span> Projects Category</span>
+                    <span>  Projects Category</span>
                 </a>
             </li>
             {% endif %}
@@ -61,7 +61,7 @@
             <li class="sidebar-item">
                 <a href="{% url 'dashboard:create_project' %}" class="sidebar-link">
                     <i class="fa fa-project-diagram"></i>
-                    <span>Manage Projects</span>
+                    <span> Projects</span>
                 </a>
             </li>
             {% endif %}
@@ -72,7 +72,7 @@
             <li class="sidebar-item">
                 <a href="{% url 'dashboard:create_news_category' %}" class="sidebar-link">
                     <i class="fa fa-newspaper" aria-hidden="true"></i>
-                    <span> News Category</span>
+                    <span>Manage News Category</span>
                 </a>
             </li>
             {% endif %}
@@ -106,7 +106,7 @@
             <li class="sidebar-item">
                 <a href="{% url 'dashboard:create_client' %}" class="sidebar-link">
                     <i class="fa fa-user" aria-hidden="true"></i>
-                    <span> Client</span>
+                    <span>  Client</span>
                 </a>
             </li>
             {% endif %}
@@ -141,7 +141,7 @@
             <li class="sidebar-item">
                 <a href="{% url 'dashboard:create_contact' %}" class="sidebar-link">
                     <i class="fas fa-user-md" aria-hidden="true"></i>
-                    <span>Contact</span>
+                    <span> Contact</span>
                 </a>
             </li>
 
