--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -157,7 +157,7 @@
     <div class="service-area">
         <div class="container">
             <div class="section-title">
-                <h4>Services</h4>
+                <h4>Services Changed</h4>
             </div>
             <div class="row">
                 <div class="col-md-6 wow fadeInUp" data-wow-duration="2s">
