--- a/dashboard/templates/dashboard/components/sidebar.html
+++ b/dashboard/templates/dashboard/components/sidebar.html
@@ -147,6 +147,14 @@
 
             {% endif %}
 
+             <li class="sidebar-item">
+                <a href="{% url 'dashboard:test' %}" class="sidebar-link">
+                    <i class="fas fa-user-md" aria-hidden="true"></i>
+                    <span>Test</span>
+                </a>
+            </li>
+
+
 
 
 
