news and project

--- a/auspicious/templates/components/styles.html
+++ b/auspicious/templates/components/styles.html
@@ -30,5 +30,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/style.min.css' %}">
     <!-- Responsive CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/responsive.min.css' %}">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/custom.css' %}">
 
     <title>Auspicious</title>
