--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -62,7 +62,7 @@
             <div class="row">
                 <div class="col-md-6 wow fadeInUp" data-wow-duration="2s">
                     <div class="service-item mb-5 mb-md-0">
-                        <a href="civil-service.html">
+                        <a href="{% url 'civil_service' %}">
                             <img src="{% static './assets/landing/assets/img/service/1.jpg' %}" alt="">
                             <div class="title">
                                 <p>CIVIL SERVICES</p>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-md-6 wow fadeInUp" data-wow-duration="2s">
                     <div class="service-item">
-                        <a href="telecom-service.html">
+                        <a href="{% url 'telecom_service' %}">
                             <img src="{% static './assets/landing/assets/img/service/2.jpg' %}" alt="">
                             <div class="title">
                                 <p>Telecom SERVICES</p>
@@ -96,149 +96,79 @@
                 <div class="col-md-12">
                     <div class="item-menu">
                         <ul>
-                            <li data-filter="" class="active">All</li>
+                            <li data-filter=".all" class="active">All</li>
                             <li data-filter=".ongoing">Ongoing</li>
                             <li data-filter=".latest">Latest</li>
                             <li data-filter=".completed">Completed</li>
                         </ul>
                     </div>
                 </div>
+
                 <div class="project-items">
+
                     <div class="row">
+                         {% for project in project_lists %}
+                        <div class="col-md-3 col-sm-6 item all">
+                            <div class="product-item">
+                                <img src="{{ project.image.url }}" alt="" class="img-fluid">
+                                <div class="overlay">
+                                    <p>{{ project.name }}</p>
+                                </div>
+                                <div class="explore">
+                                    <a href="">Explore</a>
+                                </div>
+                            </div>
+
+                        </div>
+                        {% endfor %}
+
+                        {% for project in ongoing_project_lists %}
                         <div class="col-md-3 col-sm-6 item ongoing">
                             <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/1.png' %}" alt="" class="img-fluid">
+                                <img src="{{ project.image.url }}" alt="" class="img-fluid">
                                 <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
+                                    <p>{{ project.name }}</p>
                                 </div>
                                 <div class="explore">
-                                    <a href="#">Explore</a>
+                                    <a href="">Explore</a>
                                 </div>
                             </div>
+
                         </div>
+                        {% endfor %}
+
+                        {% for project in latest_project_lists %}
                         <div class="col-md-3 col-sm-6 item latest">
                             <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/2.png' %}" alt="" class="img-fluid">
+                                <img src="{{ project.image.url }}" alt="" class="img-fluid">
                                 <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
+                                    <p>{{ project.name }}</p>
                                 </div>
                                 <div class="explore">
-                                    <a href="#">Explore</a>
+                                    <a href="">Explore</a>
                                 </div>
                             </div>
+
                         </div>
+                        {% endfor %}
+
+                        {% for project in completed_project_lists %}
                         <div class="col-md-3 col-sm-6 item completed">
                             <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/3.png' %}" alt="" class="img-fluid">
+                                <img src="{{ project.image.url }}" alt="" class="img-fluid">
                                 <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
+                                    <p>{{ project.name }}</p>
                                 </div>
                                 <div class="explore">
-                                    <a href="#">Explore</a>
+                                    <a href="">Explore</a>
                                 </div>
                             </div>
+
                         </div>
-                        <div class="col-md-3 col-sm-6 item ongoing">
-                            <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/4.png' %}" alt="" class="img-fluid">
-                                <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
-                                </div>
-                                <div class="explore">
-                                    <a href="#">Explore</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6 item completed">
-                            <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/5.png' %}" alt="" class="img-fluid">
-                                <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
-                                </div>
-                                <div class="explore">
-                                    <a href="#">Explore</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6 item latest">
-                            <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/6.png' %}" alt="" class="img-fluid">
-                                <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
-                                </div>
-                                <div class="explore">
-                                    <a href="#">Explore</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6 item completed">
-                            <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/7.png' %}" alt="" class="img-fluid">
-                                <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
-                                </div>
-                                <div class="explore">
-                                    <a href="#">Explore</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6 item ongoing">
-                            <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/8.png' %}" alt="" class="img-fluid">
-                                <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
-                                </div>
-                                <div class="explore">
-                                    <a href="#">Explore</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6 item latest">
-                            <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/9.png" alt="" class="img-fluid">
-                                <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
-                                </div>
-                                <div class="explore">
-                                    <a href="#">Explore</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6 item completed">
-                            <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/10.png' %}" alt="" class="img-fluid">
-                                <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
-                                </div>
-                                <div class="explore">
-                                    <a href="#">Explore</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6 item latest">
-                            <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/11.png' %}" alt="" class="img-fluid">
-                                <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
-                                </div>
-                                <div class="explore">
-                                    <a href="#">Explore</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6 item ongoing">
-                            <div class="product-item">
-                                <img src="{% static 'assets/landing/assets/img/projects/12.png' %}" alt="" class="img-fluid">
-                                <div class="overlay">
-                                    <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit</p>
-                                </div>
-                                <div class="explore">
-                                    <a href="#">Explore</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                        {% endfor %}
+
                 </div>
+
             </div>
         </div>
     </div>
@@ -256,36 +186,21 @@
                     </div>
                 </div>
                 <div class="col-md-8 col-8">
+
                     <div class="news">
+                        {% for news in latest_news_lists %}
+
                         <div class="item">
-                            <img src="{% static 'assets/landing/assets/img/news/1.png' %}" alt="">
+                            <img src="{{ news.image.url }}" alt="">
                             <div class="overlay">
-                                <p>01 Lorem ipsum</p>
-                                <h4>Conference ABC</h4>
+                                <p>{{news.description|safe|truncatechars_html:10 }}</p>
+                                <h4>{{ news.title }}</h4>
                             </div>
                         </div>
-                        <div class="item">
-                            <img src="{% static 'assets/landing/assets/img/news/2.png' %}" alt="">
-                            <div class="overlay">
-                                <p>01 Lorem ipsum</p>
-                                <h4>Conference ABC</h4>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="{% static 'assets/landing/assets/img/news/1.png' %}" alt="">
-                            <div class="overlay">
-                                <p>01 Lorem ipsum</p>
-                                <h4>Conference ABC</h4>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="{% static 'assets/landing/assets/img/news/2.png' %}" alt="">
-                            <div class="overlay">
-                                <p>01 Lorem ipsum</p>
-                                <h4>Conference ABC</h4>
-                            </div>
-                        </div>
+                        {% endfor %}
+
                     </div>
+
                 </div>
             </div>
         </div>
