--- a/auspicious/templates/components/scripts.html
+++ b/auspicious/templates/components/scripts.html
@@ -1,19 +1,21 @@
 {% load static %}
-    <!-- modernizr js -->
-    <script src="{% static 'assets/landing/assets/js/modernizr-2.8.3.min.js' %}"></script>
-    <!-- jquery latest version -->
-    <script src="{% static 'assets/landing/assets/js/jquery.min.js' %}"></script>
-    <!-- Bootstrap JS -->
-    <script src="{% static 'assets/landing/assets/js/bootstrap.bundle.min.js' %}"></script>
-    <!-- wow js -->
-    <script src="{% static 'assets/landing/assets/js/wow.min.js' %}"></script>
-    <!-- owl.carousel js -->
-    <script src="{% static 'assets/landing/assets/js/owl.carousel.min.js' %}"></script>
-    <!-- Slick js -->
-    <script src="{% static 'assets/landing/assets/plugins/slick/slick.min.js' %}"></script>
-    <!-- Magnific popup js -->
-    <script src="{% static 'assets/landing/assets/js/jquery.magnific-popup.min.js' %}"></script>
-    <!-- Isotope js -->
-    <script src="{% static 'assets/landing/assets/js/isotope.pkgd.min.js' %}"></script>
-    <!-- main js -->
-    <script src="{% static 'assets/landing/assets/js/main.js' %}"></script>
+
+<!-- swiper js -->
+<script src="{% static 'assets/landing/assets/plugins/swiper/swiper-bundle.js' %}"></script>
+<script src="{% static 'assets/landing/assets/plugins/swiper/swiper-config.js' %}"></script>
+<!-- modernizr js -->
+<script src="{% static 'assets/landing/assets/js/modernizr-2.8.3.min.js' %}"></script>
+<!-- Bootstrap JS -->
+<script src="{% static 'assets/landing/assets/js/bootstrap.bundle.min.js' %}"></script>
+<!-- wow js -->
+<script src="{% static 'assets/landing/assets/js/wow.min.js' %}"></script>
+<!-- owl.carousel js -->
+<script src="{% static 'assets/landing/assets/js/owl.carousel.min.js' %}"></script>
+<!-- Slick js -->
+<script src="{% static 'assets/landing/assets/plugins/slick/slick.min.js' %}"></script>
+<!-- Magnific popup js -->
+<script src="{% static 'assets/landing/assets/js/jquery.magnific-popup.min.js' %}"></script>
+<!-- Isotope js -->
+<script src="{% static 'assets/landing/assets/js/isotope.pkgd.min.js' %}"></script>
+<!-- main js -->
+<script src="{% static 'assets/landing/assets/js/main.js' %}"></script>
