--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -303,46 +303,12 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="clients-items owl-carousel owl-theme text-center">
+                                {% for clients in clients_lists %}
                                 <div class="single-item">
-                                    <a href="#"><img src="{% static 'assets/landing/assets/img/clients/1.png' %}"
-                                            alt="Clients"></a>
+                                    <a href="#"><img src="{{ clients.logo.url }}"
+                                            alt="{{ clients.name }}"></a>
                                 </div>
-                                <div class="single-item">
-                                    <a href="#"><img src="{% static 'assets/landing/assets/img/clients/2.png' %}"
-                                            alt="Clients"></a>
-                                </div>
-                                <div class="single-item">
-                                    <a href="#"><img src="{% static 'assets/landing/assets/img/clients/3.png' %}"
-                                            alt="Clients"></a>
-                                </div>
-                                <div class="single-item">
-                                    <a href="#"><img src="{% static 'assets/landing/assets/img/clients/4.png' %}"
-                                            alt="Clients"></a>
-                                </div>
-                                <div class="single-item">
-                                    <a href="#"><img src="{% static 'assets/landing/assets/img/clients/5.png' %}"
-                                            alt="Clients"></a>
-                                </div>
-                                <div class="single-item">
-                                    <a href="#"><img src="{% static 'assets/landing/assets/img/clients/6.png' %}"
-                                            alt="Clients"></a>
-                                </div>
-                                <div class="single-item">
-                                    <a href="#"><img src="{% static 'assets/landing/assets/img/clients/1.png' %}"
-                                            alt="Clients"></a>
-                                </div>
-                                <div class="single-item">
-                                    <a href="#"><img src="{% static 'assets/landing/assets/img/clients/2.png"
-                                            alt="Clients"></a>
-                                </div>
-                                <div class="single-item">
-                                    <a href="#"><img src="{% static 'assets/landing/assets/img/clients/3.png' %}"
-                                            alt="Clients"></a>
-                                </div>
-                                <div class="single-item">
-                                    <a href="#"><img src="{% static 'assets/landing/assets/img/clients/4.png' %}"
-                                            alt="Clients"></a>
-                                </div>
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
@@ -377,10 +343,9 @@
                         </div>
                         <div class="col-md-4 col-12">
                             <ul class="social-icons">
-                                <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                                <li><a href=""><i class="fa fa-instagram"></i></a></li>
-                                <li><a href=""><i class="fa fa-youtube-play"></i></a></li>
+                                <li><a href="https://www.facebook.com/AuspiciousBangladesh"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.linkedin.com/company/auspicious/"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://www.facebook.com/AuspiciousBangladesh"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                         </div>
                     </div>
