--- a/auspicious/templates/page/about.html
+++ b/auspicious/templates/page/about.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
-                    <div class="top-content">
+                    <div class="top-content " style="text-align: justify">
                         <h3><span>History</span>Overview</h3>
                         <p><span class="fw-bold">AUSPICIOUS</span> is a fast growing firm bearing motto in mind “Think for the best”. It is configured by some dynamic and potential engineers having good academic background, high quality performance, vast experience & strong ability of liaison.</p>
                         <p>The firm is configured by some experienced and potential engineers & management persons having high quality performance, good reputation and strong ability of liaison. Since inception our dedication and attribution is to achieve and demonstrate whole hearted effort through hard work and relentless pursuit in view to propelling ‘Auspicious’ to make its dream to reality.</p>
@@ -71,8 +71,8 @@
     <div class="mission-vision py-5 section-title-2">
         <div class="container">
             <h3 class="text-center text-uppercase fw-bold mb-4"><span>Mission</span> & Vision</h3>
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row" style="text-align: justify">
+                <div class="col-md-6" >
                     <ol>
                         <li>Adopt innovative practices to ensure quality without compromising the time frame & budget.</li>
                         <li>To offer value added in cost effective service to improve our partner-client performance, thus to turn clients dreams into reality.</li>
@@ -94,26 +94,28 @@
     <div class="org-profile py-4 section-title-2">
         <div class="container">
             <h3 class="text-center text-uppercase fw-bold mb-3"><span>organization</span> profile</h3>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center" style="text-align: center">
                 <div class="col-md-10">
+
                     <table class="table text-white">
                         <tr>
-                            <td class="text-uppercase">organization name</td>
+                            <td class="text-uppercase" >organization name</td>
                             <td>Auspicious</td>
                         </tr>
                         <tr>
-                            <td class="text-uppercase">Registration Date</td>
+                            <td class="text-uppercase" >Registration Date</td>
                             <td>25 September 2008</td>
                         </tr>
                         <tr>
-                            <td class="text-uppercase">Chief Executive Officer</td>
+                            <td class="text-uppercase" >Chief Executive Officer</td>
                             <td>Md. Shoyeb Islam</td>
                         </tr>
                         <tr>
-                            <td class="text-uppercase">Email Address</td>
+                            <td class="text-uppercase" >Email Address</td>
                             <td>info@auspiciousbd.com</td>
                         </tr>
                     </table>
+
                 </div>
             </div>
         </div>
