--- a/auspicious/templates/components/scripts.html
+++ b/auspicious/templates/components/scripts.html
@@ -17,5 +17,7 @@
 <script src="{% static 'assets/landing/assets/js/jquery.magnific-popup.min.js' %}"></script>
 <!-- Isotope js -->
 <script src="{% static 'assets/landing/assets/js/isotope.pkgd.min.js' %}"></script>
+<!-- custom js -->
+<script src="{% static 'assets/js/custom.js' %}"></script>
 <!-- main js -->
 <script src="{% static 'assets/landing/assets/js/main.js' %}"></script>
