--- a/auspicious/templates/components/styles.html
+++ b/auspicious/templates/components/styles.html
@@ -32,6 +32,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/responsive.min.css' %}">
 <!-- Custom CSS -->
 <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'assets/css/custom.css' %}">
 
 <!-- Swiper CSS -->
 <link rel="stylesheet" href="{% static 'assets/landing/assets/plugins/swiper/swiper-bundle.css' %}">
