--- a/dashboard/templates/dashboard/snippets/form.html
+++ b/dashboard/templates/dashboard/snippets/form.html
@@ -59,7 +59,7 @@
 
                         <!-- main input -->
                         {% if field.field.widget.input_type == "checkbox" %}
-                        {{ field|add_class:'checkbox form-control' }}
+                        {{ field|add_class:'checkbox' }}
                         {% else %}
                         {{ field|add_class:'form-control' }}
                         {% endif %}
