--- a/dashboard/templates/dashboard/components/sidebar.html
+++ b/dashboard/templates/dashboard/components/sidebar.html
@@ -135,6 +135,18 @@
 
             {% endif %}
 
+            <!-- Job -->
+
+            {% if perms.dashboard.add_job or perms.dashboard.view_job %}
+            <li class="sidebar-item">
+                <a href="{% url 'dashboard:create_job' %}" class="sidebar-link">
+                    <i class="fas fa-user-md" aria-hidden="true"></i>
+                    <span>Job</span>
+                </a>
+            </li>
+
+            {% endif %}
+
             <!-- Contact -->
 
             {% if perms.dashboard.add_project or perms.dashboard.view_contact %}
