--- a/auspicious/templates/page/telecom-project.html
+++ b/auspicious/templates/page/telecom-project.html
@@ -41,27 +41,32 @@
         <div class="container">
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Telecom Completed Project</button>
-                    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Telecom Ongoing Project</button>
+                    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Telecom Ongoing Project</button>
+                    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Telecom Completed Project</button>
                 </div>
             </nav>
             <div class="tab-content fw-light" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                     <div class="p-2 pb-3 border-lbr">
                         <div class="table-responsive">
-                            <table class="table">
+                            <table class="table" style="text-align: center">
                                 <tr>
-                                    <td>Sl</td>
-                                    <td>Client Name</td>
-                                    <td>Development Year</td>
-                                    <td>Scope</td>
+                                    <th>Sl</th>
+                                    <th>Project Name</th>
+                                    <th>Client Name</th>
+                                    <th>Start Year</th>
+                                    <th>Scope</th>
                                 </tr>
+                                {% for project in ongoing_project_lists %}
                                 <tr>
-                                    <td>01</td>
-                                    <td>Ericsson</td>
-                                    <td>2020</td>
-                                    <td>Robi VoLTE Drive Test and Reporting</td>
+                                    <td>{{ forloop.counter  }}</td>
+                                    <td>{{ project.name}}</td>
+                                    <td>{{ project.client_name }}</td>
+                                    <td>{{ project.developement_start_year }} </td>
+                                    <td>{{ project.scope|safe|truncatechars_html:50}}</td>
                                 </tr>
+                                {% endfor %}
+
                             </table>
                         </div>
                         <nav aria-label="Page navigation example">
@@ -83,19 +88,24 @@
                 <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                     <div class="p-2 pb-3 border-lbr">
                         <div class="table-responsive">
-                            <table class="table">
+                            <table class="table" style="text-align: center">
                                 <tr>
-                                    <td>Sl</td>
-                                    <td>Client Name</td>
-                                    <td>Development Year</td>
-                                    <td>Scope</td>
+                                    <th>Sl</th>
+                                    <th>Project Name</th>
+                                    <th>Client Name</th>
+                                    <th>Year</th>
+                                    <th>Scope</th>
                                 </tr>
+                                {% for project in completed_project_lists %}
                                 <tr>
-                                    <td>01</td>
-                                    <td>Ericsson</td>
-                                    <td>2020</td>
-                                    <td>Robi VoLTE Drive Test and Reporting</td>
+                                    <td>{{ forloop.counter }}</td>
+                                    <td>{{ project.name}}</td>
+                                    <td>{{ project.client_name }}</td>
+                                    <td>{{ project.developement_start_year }} - {{ project.developement_end_year }} </td>
+                                    <td>{{ project.scope|safe|truncatechars_html:50}}</td>
                                 </tr>
+                                {% endfor %}
+
                             </table>
                         </div>
                         <nav aria-label="Page navigation example">
